[gd_scene load_steps=5 format=2]

[ext_resource path="res://VCR_OSD_MONO.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Title Screen/Title Screen.gd" type="Script" id=2]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = 56.0
margin_right = 41.0
margin_bottom = 71.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 40, 8 )
custom_fonts/font = SubResource( 1 )
text = "None Left"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start Game" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -96.0
margin_right = 80.0
margin_bottom = -48.0
focus_mode = 0
enabled_focus_mode = 0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.622
anchor_right = 0.5
anchor_bottom = 0.622
margin_left = -80.0
margin_top = -95.84
margin_right = 80.0
margin_bottom = -47.84
focus_mode = 0
enabled_focus_mode = 0
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.622
anchor_right = 0.5
anchor_bottom = 0.622
margin_left = -80.0
margin_top = -7.84
margin_right = 80.0
margin_bottom = 40.16
focus_mode = 0
enabled_focus_mode = 0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.622
anchor_right = 0.5
anchor_bottom = 0.622
margin_left = -80.0
margin_top = 80.16
margin_right = 80.0
margin_bottom = 128.16
focus_mode = 0
enabled_focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
